@@ -62,6 +62,8 @@ dpkg (1.17.7) UNRELEASED; urgency=low
       on such system anymore. Note that GNU/kFreeBSD is still using Linux
       procfs code (which ends up using linprocfs).
     - Fix OpenBSD KVM code to use current kinfo_proc layout.
+    - Detect system specific headers at configure time instead of hardcoding
+      their usage depending on system macros.
 
   [ Updated dpkg translations ]
   * German (Sven Joachim).
